# claude-sessions

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml  track-downloads.yml
scripts/: build.sh  download-stats.sh  install.sh
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/lib/: ActivityHeatmap.svelte  BookmarksView.svelte  ConversationView.svelte  FileChangesPanel.svelte  MessageBubble.svelte  ProjectGrid.svelte  SessionList.svelte  SettingsPanel.svelte  ShortcutsOverlay.svelte  SubagentPanel.svelte  bookmarks.svelte.ts  clipboard.ts  format.ts  preferences.svelte.ts  types.ts
stats/: downloads.jsonl
website/: package-lock.json  package.json
website/src/pages/: index.astro
website/src/styles/: global.css
