[package]
name = "claude-sessions"
version = "0.3.1"
edition = "2021"

[lib]
name = "claude_sessions_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5"
dirs = "6"
